<resources>
    <string name="app_name">Billigtlager</string>
    <string name="Email" translatable="false">info@billigtlager.dk</string>
    <string name="Besked">Besked:</string>
    <string name="Emne">Emne:</string>
    <string name="Navn">Navn:</string>
    <string name="Telefon">Telefon:</string>
    <string name="Telefontider">Telefontider</string>
    <string name="TelefontiderÅbent">Mandag–Søndag: 8:00–20:00</string>
    <string name="Dør1">Dør 1</string>
    <string name="Dør2">Dør 2</string>
    <string name="Dør3">Dør 3</string>
    <string name="Dør4">Dør 4</string>


    /* hints */
    <string name="BeskedEmne">Besked emne</string>
    <string name="EmailHint">navn@eksempel.dk</string>
    <string name="NummerHint" translatable="false">+45 12 34 56 78*</string>
    <string name="OmOs">Vi er et ungt lokalt Næstved par, som igennem mange år både er flyttet meget, stiftet familie, udvidet forretningen, arvet ting eller bare haft for mange ting i hjemmet. Vi har i hvert fald haft et stort behov for mere opbevaringsplads til flytterodet, børnetingene, arvemøblerne og alle de diverse ting, man anskaffer sig gennem livet. Hver gang vi har forsøgt at finde et rum vi kunne leje, er vi blevet overrasket over prisen, åbningstiderne og/eller sikkerheden. Derfor syntes vi, at der manglede et sted, hvor den fulde pakke -både pris, sikkerhed og fleksibilitet blev tilbudt, og der ikke var gået på kompromis med hverken det ene eller det andet. Det er det, vi ønsker at tilbyde alle fremtidige lejere.</string>
    <string name="HvemErVi">Hvem er vi?</string>
    <string name="hintName" translatable="false">Jens Hansen*</string>
    <string name="Send">Send</string>
    <string name="fabDial" translatable="false">Dial</string>
    <string name="TelefonNummer">Telefonnummer: +45 20 78 12 18</string>
    <string name="EmailKontakt">Email: info@billigtlager.dk</string>
    <string name="kontaktInformationer">Kontakt informationer:</string>
    <string name="DørBesked">Tryk på en af følgende knapper for at åbne den pågældende dør til lageret.</string>
    <string name="IntroTekst">Fleksibel, frostfri og sikker opbevaring</string>
    <string name="ByensBilligste">Byens billigste</string>
    <string name="Adgang">Adgang 24/7</string>
    <string name="Overvågning">Overvågning</string>
    <string name="Opvarmet">Opvarmet</string>
    <string name="VoresPriser">Prisen er 99 kr. pr. m2 de første 3 måneder, herefter er prisen 119 kr. om måneden.</string>
    <string name="RumInfo">Rummene varierer fra 3 m2 til 19,8 m2.</string>
    <string name="Priser">Vores priser:</string>
    <string name="PrisKnap">Book rum</string>
    <string name="Adresse">Adresse: Militærsvinget 8A, 4700 Næstved</string>
    <string name="Oversigtskort">Oversigtskort</string>
    <string name="OversigtsKortInfo">"Dette er et oversigtskort over lageret og dets rum "</string>
    <string name="BookRumBesked">"Hos Billigtlager kan du booke rum i mange forskellige størrelser. Nedenunder kan du se de forskellige rum, som du kan booke. "</string>
    <string name="Rum3_4">Rum 3-4 m2</string>
    <string name="Rum5_6">Rum 5-6 m2</string>
    <string name="Rum7_8">Rum 7-8 m2</string>
    <string name="Rum9_10">Rum 9-10 m2</string>
    <string name="rum15_20">Rum 15-20 m2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>