<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >


    <ScrollView
        android:id="@+id/scrollViewFrontPage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#b5cef5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="26dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/Telefontider"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/TelefontiderÅbent"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/Navn"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/ET_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/bg_round"
                android:hint="@string/hintName"
                android:importantForAutofill="no"
                android:inputType="text"
                android:padding="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/Telefon"
                android:textColor="@color/black"
                android:textSize="16sp" />


            <EditText
                android:id="@+id/ET_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/bg_round"
                android:hint="@string/NummerHint"
                android:importantForAutofill="no"
                android:inputType="phone"
                android:padding="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/Emne"
                android:textColor="@color/black"
                android:textSize="16sp" />


            <EditText
                android:id="@+id/ET_subject"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/bg_round"
                android:hint="@string/BeskedEmne"
                android:importantForAutofill="no"
                android:inputType="textEmailSubject"
                android:padding="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/Besked"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/ET_message"
                android:layout_width="match_parent"
                android:layout_height="320dp"
                android:layout_gravity="top"
                android:layout_margin="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_round"
                android:hint="@string/Besked"
                android:importantForAutofill="no"
                android:inputType="text"
                android:padding="10dp"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/bt_send"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:onClick="sendEmail"
                android:padding="10dp"
                android:text="@string/Send"
                android:textSize="25sp" />


            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/HvemErVi"
                android:textColor="@color/black"
                android:textSize="32sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/toolbar" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:orientation="vertical"
                android:text="@string/OmOs"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                tools:layout_editor_absoluteX="16dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/kontaktInformationer"
                android:textColor="@color/black"
                android:textSize="24sp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/TelefonNummer"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/EmailKontakt"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/Adresse"
                android:textColor="@color/black" />
        </LinearLayout>


    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:onClick="FABdial"
        android:id="@+id/FAB_dial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/fab_icon"
        android:layout_margin="16dp"
        android:contentDescription="@string/fabDial" />




</androidx.constraintlayout.widget.ConstraintLayout>