<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        style="@style/Widget.MaterialComponents.Toolbar.Primary"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/app_name"
        android:background="#1d538c"/>


    <ScrollView
        android:id="@+id/scrollViewFrontPage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="57dp"
        android:background="#b5cef5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="8dp"
                android:text="@string/IntroTekst"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="32sp" />

            <ImageView
                android:id="@+id/kasseBillede"
                android:layout_width="wrap_content"
                android:layout_height="241dp"
                android:scaleType="fitStart"
                android:src="@drawable/kasse_billede" />


            <ImageView
                android:layout_marginTop="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/dollar_icon"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ByensBilligste"
                app:layout_constraintTop_toBottomOf="@+id/kasseBillede"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_gravity="center"/>

            <ImageView
                android:layout_marginTop="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/time_icon"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Adgang"
                app:layout_constraintTop_toBottomOf="@+id/kasseBillede"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_gravity="center"/>

            <ImageView
                android:layout_marginTop="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/vision_icon"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Overvågning"
                app:layout_constraintTop_toBottomOf="@+id/kasseBillede"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_gravity="center"/>

            <ImageView
                android:layout_marginTop="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/heat_icon"
                android:layout_gravity="center"/>

            <TextView
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Opvarmet"
                app:layout_constraintTop_toBottomOf="@+id/kasseBillede"
                android:textAlignment="center"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_gravity="center"/>

            <TextView
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Priser"
                android:textColor="@color/black"
                android:textSize="42sp"
                android:background="#1d538c"
                android:gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/VoresPriser"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/RumInfo"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:layout_marginTop="8dp"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/PrisKnap"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/kontaktInformationer"
                android:textSize="24sp"
                android:textAppearance="?android:attr/textAppearanceLarge" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/TelefonNummer" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/EmailKontakt" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/Adresse" />



        </LinearLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>